--- a/package.json
+++ b/package.json
@@ -12,11 +12,14 @@
   "dependencies": {
     "@chakra-ui/react": "^3.8.1",
     "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
     "next-themes": "^0.4.4",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-icons": "^5.5.0",
-    "react-router-dom": "^7.2.0",
+    "react-router-dom": "^6.26.0",
+    "recoil": "^0.7.7",
+    "recoil-persist": "^5.1.0",
     "vite-plugin-pages": "^0.32.5"
   },
   "devDependencies": {
